force-app/main/default/objects/Transit_Flight_Detail__c/Transit_Flight_Detail__c.object-meta.xml
<CustomObject>
    <label>Transit Flight Detail</label>
    <nameField>
        <displayFormat>TF-{0000}</displayFormat>
        <label>Transit Flight Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transit Flight Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>