force-app/main/default/objects/Transit_Flight_Detail__c/fields/Connecting_Flight__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connecting Flight</label>
    <referenceTo>Flight_Detail__c</referenceTo>
    <relationshipLabel>Transit Flight Details (Connecting Flight)</relationshipLabel>
    <relationshipName>Transit_Flight_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>