force-app/main/default/objects/Transit_Flight_Detail__c/fields/Main_Flight__c.field-meta.xml
<CustomField>
    <fullName>Main_Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Flight</label>
    <referenceTo>Flight_Detail__c</referenceTo>
    <relationshipLabel>Transit Flight Details</relationshipLabel>
    <relationshipName>Transit_Flight_Details</relationshipName>
    <type>Lookup</type>
</CustomField>