force-app/main/default/objects/Transit_Flight_Detail__c/fields/Transit_Airport__c.field-meta.xml
<CustomField>
    <fullName>Transit_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Transit Flight Details</relationshipLabel>
    <relationshipName>Transit_Flight_Details</relationshipName>
    <type>Lookup</type>
</CustomField>